# raspberry-pi-pico-LSM6DSOX-spi

./: CMakeLists.txt  README.md  imu.c  lsm6dsox.cpp  lsm6dsox.hpp  main.c  main.cpp  mpu.cpp  mpu.hpp  spi.cpp  spi.hpp
scripts/: live-data-to-csv.py  live-data-to-text.py  plot-live-csv-data.py  plot-live-txt-data.py
